--- a/src/index.scss
+++ b/src/index.scss
@@ -109,6 +109,7 @@ table {
 }
 
 input {
+  color: var(--main-white);
   border-radius: 0;
 }
 
@@ -136,6 +137,7 @@ input[type='reset'] {
   --main-gray: #5e6271;
   --btn-bg: #090a1c;
   --main-font: 'Titillium Web', sans-serif;
+  --card-bg: #202134;
 }
 
 body {
@@ -150,7 +152,7 @@ body {
 
 .sidebar {
   background-color: #090a1c;
-  width: 300px;
+  width: 280px;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -286,7 +288,7 @@ body {
   margin: 20px 100px 20px 100px;
 
   h2 {
-    font-size: 34px;
+    font-size: 32px;
     font-weight: 700;
   }
 
@@ -294,7 +296,7 @@ body {
     display: flex;
     flex-direction: row;
 
-    p {
+    button {
       margin: 20px 20px 0 0;
       padding: 10px 20px;
       border-radius: 10px;
@@ -305,6 +307,105 @@ body {
       }
     }
   }
+}
+
+.results {
+  margin: 30px 100px;
+
+  h4 {
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 16px;
+  }
+
+  &--grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+
+    &__card {
+      height: 372px;
+      width: 333px;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+
+      &:hover {
+        cursor: pointer;
+      }
+
+      &--poster {
+        height: 180px;
+        width: 317px;
+        border-radius: 10px;
+        position: absolute;
+      }
+
+      &--content {
+        margin-top: 150px;
+        padding-top: 50px;
+        height: 70%;
+        width: 100%;
+        border-radius: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: var(--card-bg);
+      }
+
+      &--shadow {
+        position: absolute;
+        height: 1px;
+        width: 1px;
+        top: 2%;
+        left: 10%;
+        border-radius: 50%;
+        // background-color: #1362d8;
+        box-shadow: #1362d8 0px 22px 70px 25px;
+        z-index: -1;
+      }
+
+      &--description {
+        width: 300px;
+        border-bottom: 1px solid;
+        border-image: linear-gradient(0.25turn, #1362d8, #02dbe9);
+        border-image-slice: 1;
+        padding-bottom: 24px;
+
+        h2 {
+          font-size: 26px;
+          margin-bottom: 5px;
+        }
+
+        p {
+          line-height: 20px;
+          margin: 5px 0;
+
+          &:nth-of-type(1) {
+            color: var(--main-gray);
+          }
+        }
+      }
+
+      &--icons {
+        margin: 10px 0;
+
+        img {
+          margin: 0 26px;
+        }
+      }
+    }
+  }
+}
+
+.loading {
+  margin: 0 auto;
+  margin-top: 10%;
 }
 
 .active {
