--- a/src/index.scss
+++ b/src/index.scss
@@ -347,7 +347,7 @@ body {
 
       &--content {
         margin-top: 150px;
-        padding-top: 50px;
+        padding-top: 70px;
         height: 70%;
         width: 100%;
         border-radius: 10px;
@@ -372,6 +372,7 @@ body {
 
       &--description {
         width: 300px;
+        height: 100px;
         border-bottom: 1px solid;
         border-image: linear-gradient(0.25turn, #1362d8, #02dbe9);
         border-image-slice: 1;
@@ -393,13 +394,26 @@ body {
       }
 
       &--icons {
-        margin: 10px 0;
-
-        img {
-          margin: 0 26px;
-        }
+        margin: auto 0;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
       }
     }
+  }
+}
+
+.selected {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 30px 100px;
+
+  .cover {
+    width: 500px;
   }
 }
 
@@ -410,4 +424,18 @@ body {
 
 .active {
   background-color: var(--title-bg);
+}
+
+.skeleton {
+  animation: skeleton-loading 1s linear infinite alternate;
+  color: transparent;
+}
+
+@keyframes skeleton-loading {
+  0% {
+    background-color: #808080;
+  }
+  100% {
+    background-color: #cfcfcf;
+  }
 }
