--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -3,7 +3,7 @@
   display: flex;
   height: 120px;
   background-color: var(--bg-color);
-  width: calc(100vw - 300px);
+  width: 100%;
   justify-content: space-between;
   align-items: center;
 
