Refactor Card.js to be responsive Fixes #3 made cards responsive

--- a/src/scss/components/_app.scss
+++ b/src/scss/components/_app.scss
@@ -12,12 +12,5 @@ body {
   color: var(--main-white);
   font-family: var(--main-font);
   background-color: var(--bg-color);
-}
-
-.project {
-  display: flex;
-
-  .main {
-    margin-left: 14%;
-  }
+  margin-left: 17rem;
 }
