--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,9 +1,7 @@
 .header {
   padding: 40px 100px;
   display: flex;
-  height: 120px;
-  background-color: var(--bg-color);
-  width: calc(100vw - 300px);
+  // background-color: var(--bg-color);
   justify-content: space-between;
   align-items: center;
 
