--- a/src/scss/components/_results.scss
+++ b/src/scss/components/_results.scss
@@ -1,5 +1,5 @@
 .results {
-  margin: 30px 100px;
+  margin: 30px 80px;
 
   h4 {
     font-size: 24px;
@@ -11,7 +11,25 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 30px;
-    grid-row-gap: 30px;
+    grid-column-gap: 2rem;
+    grid-row-gap: 2rem;
+  }
+
+  @media only screen and (max-width: 1700px) {
+    &__grid {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+
+  @media only screen and (max-width: 1400px) {
+    &__grid {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+
+  @media only screen and (max-width: 1000px) {
+    &__grid {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 }
