--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -3,7 +3,7 @@
   display: flex;
   height: 120px;
   background-color: var(--bg-color);
-  width: calc(100vw - 300px);
+
   justify-content: space-between;
   align-items: center;
 
@@ -29,13 +29,20 @@
   }
 
   input {
-    width: 350px;
-    height: 40px;
+    width: 20rem;
+    height: 2.5rem;
     border-radius: 10px;
-    padding-left: 20px;
+    padding-left: 1.5rem;
     background-color: transparent;
     border: 1px solid var(--main-gray);
-    margin-left: 15px;
+    margin: 0 1rem;
+
+    @media only screen and (max-width: 1200px) {
+      width: 15rem;
+    }
+    @media only screen and (max-width: 1000px) {
+      width: 10rem;
+    }
   }
 
   &__right {
@@ -53,13 +60,18 @@
       p {
         color: var(--main-gray);
       }
+
+      @media only screen and (max-width: 1400px) {
+        display: none;
+      }
     }
 
     .profile {
       border-radius: 50%;
-      height: 57px;
-      width: 57px;
+      height: 4rem;
+      width: 4rem;
       margin: 0 24px;
+      aspect-ratio: 1;
 
       &:hover {
         cursor: pointer;
