Refactor Card.js to be responsive Fixes #3 fixed conflict

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,7 +1,8 @@
 .header {
   padding: 40px 100px;
   display: flex;
-  // background-color: var(--bg-color);
+  height: 120px;
+  background-color: var(--bg-color);
   justify-content: space-between;
   align-items: center;
 
