Refactor Sidebar.js SCSS Fixes #5 fixed conflicts

--- a/src/scss/components/_app.scss
+++ b/src/scss/components/_app.scss
@@ -12,5 +12,5 @@ body {
   color: var(--main-white);
   font-family: var(--main-font);
   background-color: var(--bg-color);
-  padding-left: 17rem;
+  margin-left: 17rem;
 }
