--- a/src/scss/components/_sidebar.scss
+++ b/src/scss/components/_sidebar.scss
@@ -4,9 +4,14 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   padding-top: 4rem;
   position: fixed;
   inset: 0 auto 0 0;
+
+  @media only screen and (max-width: 1000px) {
+    display: none;
+  }
 
   &__logo {
     height: 5rem;
