--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -35,7 +35,9 @@
     @media only screen and (max-width: 600px) {
       height: 2rem;
       width: 2rem;
-      // margin-bottom: 1rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
 
