--- a/src/scss/components/_selected.scss
+++ b/src/scss/components/_selected.scss
@@ -19,22 +19,39 @@
   &__right {
     width: 35%;
     line-height: 1.2rem;
+
+    @media only screen and (max-width: 1200px) {
+      width: 70%;
+    }
+
+    @media only screen and (max-width: 800px) {
+      width: 90%;
+    }
+    @media only screen and (max-width: 600px) {
+      width: 100%;
+    }
   }
 
   &__right {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 10%);
-    grid-column-gap: 30px;
-    grid-row-gap: 30px;
+    grid-template-rows: repeat(4, 5rem);
+    grid-column-gap: 60px;
+    grid-row-gap: 60px;
+
+    @media only screen and (max-width: 1200px) {
+      // margin-bottom: 3rem;
+    }
   }
 
   .detail {
-    margin-bottom: 1.5rem;
-
     h2 {
       font-size: 1.3rem;
       margin-bottom: 0.7rem;
+      color: var(--main-gray);
+    }
+
+    button {
       color: var(--main-gray);
     }
   }
@@ -52,4 +69,13 @@
   .description {
     width: 30%;
   }
+
+  @media only screen and (max-width: 1200px) {
+    flex-direction: column;
+    align-items: center;
+    margin: 30px 60px;
+  }
+
+  // @media only screen and (max-width: 800px) {
+  // }
 }
