--- a/src/scss/components/_sidebar.scss
+++ b/src/scss/components/_sidebar.scss
@@ -19,6 +19,10 @@
   &__logo {
     height: 5rem;
 
+    &:hover {
+      cursor: pointer;
+    }
+
     @media only screen and (max-width: 1000px) {
       height: 3.5rem;
     }
