--- a/src/scss/components/_results.scss
+++ b/src/scss/components/_results.scss
@@ -1,5 +1,8 @@
 .results {
   margin: 30px 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
   h4 {
     font-size: 24px;
@@ -15,21 +18,23 @@
     grid-row-gap: 2rem;
   }
 
-  @media only screen and (max-width: 1700px) {
+  @media only screen and (max-width: 1400px) {
     &__grid {
       grid-template-columns: repeat(3, 1fr);
     }
   }
 
-  @media only screen and (max-width: 1400px) {
+  @media only screen and (max-width: 1200px) {
     &__grid {
       grid-template-columns: repeat(2, 1fr);
+      margin: 30px 0 50px 0;
     }
   }
 
-  @media only screen and (max-width: 800px) {
+  @media only screen and (max-width: 568px) {
     &__grid {
       grid-template-columns: repeat(1, 1fr);
+      margin: 30px 20px 30px 30px;
     }
   }
 
@@ -38,6 +43,6 @@
   }
 
   @media only screen and (max-width: 400px) {
-    margin: 30px 20px 30px 40px;
+    margin: 30px 10px 30px 30px;
   }
 }
