--- a/src/scss/components/_metacritic.scss
+++ b/src/scss/components/_metacritic.scss
@@ -1,7 +1,7 @@
 .metacritic {
-  padding: 9px;
+  padding: 0.5rem;
   border-radius: 50%;
-  border: 2px solid;
+  border: 0.125rem solid;
   display: inline-flex;
   align-items: center;
   &.high {
