--- a/src/scss/components/_sidebar.scss
+++ b/src/scss/components/_sidebar.scss
@@ -75,7 +75,7 @@
     width: 9rem;
     height: 2.5rem;
     border: 2px solid #7000ff;
-    border-radius: 25px;
+    border-radius: 1.5rem;
     align-self: center;
     background-color: transparent;
     margin: 5rem 0 1rem 0;
@@ -91,7 +91,7 @@
     position: absolute;
     inset: 50% 0 auto auto;
     font-size: 2rem;
-    padding: 5px;
+    padding: 0.5rem;
     display: none;
     height: 3.5rem;
     z-index: 6;
