--- a/src/scss/components/_filter.scss
+++ b/src/scss/components/_filter.scss
@@ -1,8 +1,8 @@
 .filter {
-  margin: 20px 80px;
+  margin: 1.25rem 5rem;
 
   h2 {
-    font-size: 32px;
+    font-size: 2rem;
     font-weight: 700;
   }
 
@@ -16,9 +16,9 @@
     }
 
     button {
-      margin: 20px 20px 0 0;
-      padding: 10px 20px;
-      border-radius: 10px;
+      margin: 1.25rem 1.25rem 0 0;
+      padding: 0.625rem 1.25rem;
+      border-radius: 0.625rem;
       font-weight: 600;
     }
   }
