--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,7 +1,7 @@
 .header {
-  padding: 40px 80px;
+  padding: 2.5rem 5rem;
   display: flex;
-  height: 120px;
+  height: 7.5rem;
   background-color: var(--bg-color);
   display: flex;
   justify-content: space-between;
@@ -20,13 +20,13 @@
   button {
     color: var(--main-gray);
     background-color: transparent;
-    height: 38px;
-    width: 38px;
+    height: 2.375rem;
+    width: 2.375rem;
     border-radius: 50%;
     border: 1px solid var(--main-gray);
-    font-size: 28px;
-    margin-right: 15px;
-    padding-bottom: 7px;
+    font-size: 1.9rem;
+    margin-right: 1rem;
+    padding-bottom: 0.5rem;
 
     &:hover {
       color: var(--main-white);
@@ -44,7 +44,7 @@
   input {
     width: 20rem;
     height: 2.5rem;
-    border-radius: 10px;
+    border-radius: 0.625rem;
     padding-left: 1.5rem;
     background-color: transparent;
     border: 1px solid var(--main-gray);
@@ -73,7 +73,7 @@
       text-align: right;
 
       h4 {
-        margin-bottom: 5px;
+        margin-bottom: 0.5rem;
       }
 
       p {
@@ -89,7 +89,7 @@
       border-radius: 50%;
       height: 4rem;
       width: 4rem;
-      margin: 0 24px;
+      margin: 0 1.5rem;
       aspect-ratio: 1;
 
       &:hover {
@@ -112,10 +112,10 @@
   }
 
   @media only screen and (max-width: 600px) {
-    padding: 20px 40px 20px 50px;
+    padding: 1.5rem 2.5rem 1.5rem 3.125rem;
   }
 
   @media only screen and (max-width: 400px) {
-    padding: 20px 10px 20px 40px;
+    padding: 1.5rem 0.625rem 1.5rem 2.5rem;
   }
 }
