--- a/src/scss/components/_results.scss
+++ b/src/scss/components/_results.scss
@@ -1,13 +1,13 @@
 .results {
-  margin: 30px 80px;
+  margin: 1.875rem 5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
 
   h4 {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 700;
-    margin-bottom: 25px;
+    margin-bottom: 1.5rem;
   }
 
   &__grid {
@@ -27,14 +27,14 @@
   @media only screen and (max-width: 1200px) {
     &__grid {
       grid-template-columns: repeat(2, 1fr);
-      margin: 30px 0 50px 0;
+      margin: 1.875rem 0 3.125rem 0;
     }
   }
 
   @media only screen and (max-width: 568px) {
     &__grid {
       grid-template-columns: repeat(1, 1fr);
-      margin: 30px 20px 30px 30px;
+      margin: 1.875rem 1.5rem 1.875rem 1.875rem;
     }
   }
 
