--- a/src/scss/components/_filter.scss
+++ b/src/scss/components/_filter.scss
@@ -28,10 +28,10 @@
   }
 
   @media only screen and (max-width: 600px) {
-    margin: 0 40px 0 50px;
+    margin: 0 2.5rem 0 3.125rem;
   }
 
   @media only screen and (max-width: 400px) {
-    margin: 0 20px 0 40px;
+    margin: 0 1.25rem 0 2.5rem;
   }
 }
