--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -73,43 +73,49 @@
       display: flex;
       align-items: center;
       text-align: right;
-    }
 
-    .profile {
-      border-radius: 50%;
-      height: 4rem;
-      width: 4rem;
-      margin: 0 1.5rem;
-      aspect-ratio: 1;
+      &__info {
+        text-align: right;
 
-      &:hover {
-        cursor: pointer;
+        h4 {
+          margin-bottom: 0.5rem;
+        }
+
+        p {
+          color: var(--main-gray);
+        }
+
+        @media only screen and (max-width: 1400px) {
+          display: none;
+        }
       }
 
-      @media only screen and (max-width: 600px) {
-        height: 3rem;
-        width: 3rem;
+      &-portrait {
+        border-radius: 50%;
+        height: 4rem;
+        width: 4rem;
+        margin: 0 1.5rem;
+        aspect-ratio: 1;
+
+        &:hover {
+          cursor: pointer;
+        }
+
+        @media only screen and (max-width: 600px) {
+          height: 3rem;
+          width: 3rem;
+        }
       }
-    }
 
-    .bell:hover {
-      cursor: pointer;
-    }
-  }
+      &__notifications {
+        &-bell {
+          cursor: pointer;
 
-  &__user-info {
-    text-align: right;
-
-    h4 {
-      margin-bottom: 0.5rem;
-    }
-
-    p {
-      color: var(--main-gray);
-    }
-
-    @media only screen and (max-width: 1400px) {
-      display: none;
+          @media only screen and (max-width: 1400px) {
+            display: none;
+          }
+        }
+      }
     }
   }
 
