swapped input type from 'text' to 'search'

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -45,7 +45,7 @@
     width: 20rem;
     height: 2.5rem;
     border-radius: 0.625rem;
-    padding-left: 1.5rem;
+    padding: 0 1.5rem;
     background-color: transparent;
     border: 1px solid var(--main-gray);
     margin: 0 1rem;
