--- a/src/scss/animations/_skeleton.scss
+++ b/src/scss/animations/_skeleton.scss
@@ -4,6 +4,14 @@
   width: 100%;
   height: 100%;
   z-index: 5;
+
+  &--selected {
+    animation: skeleton-loading 1s linear infinite alternate;
+    color: transparent;
+    width: 100%;
+    height: auto;
+    z-index: 5;
+  }
 }
 
 @keyframes skeleton-loading {
