--- a/src/scss/animations/_skeleton.scss
+++ b/src/scss/animations/_skeleton.scss
@@ -1,16 +1,47 @@
 .skeleton {
   animation: skeleton-loading 1s linear infinite alternate;
-  color: transparent;
-  width: 100%;
-  height: 100%;
-  z-index: 5;
 
-  &--selected {
-    animation: skeleton-loading 1s linear infinite alternate;
-    color: transparent;
+  &-cover {
     width: 100%;
     height: auto;
-    z-index: 5;
+    border-radius: 0.625rem;
+
+    &--selected {
+      width: 100%;
+      height: 100%;
+      margin-bottom: 1.5rem;
+    }
+  }
+
+  &-title {
+    width: 100%;
+    height: auto;
+    color: transparent;
+    padding: 0.5rem;
+    border: none !important;
+  }
+
+  &-text {
+    width: 100%;
+    height: auto;
+    color: transparent;
+  }
+
+  &__icons {
+    border: none;
+    height: auto;
+    padding: 1.75rem;
+
+    img {
+      display: none;
+    }
+  }
+
+  &__grid {
+    div {
+      width: 100%;
+      height: 4rem;
+    }
   }
 }
 
