--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -120,7 +120,7 @@
   }
 
   .active {
-    color: var(--main-white) !important;
+    color: var(--main-white);
   }
 
   @media only screen and (max-width: 600px) {
