give filterbutton component its own scss file, changed its class name and gave a modifier, instead of .active class

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,4 +8,5 @@
 @import './components/results';
 @import './components/card';
 @import './components/selected';
+@import './components/filterbutton';
 @import './animations/skeleton';
