--- a/src/scss/components/_results.scss
+++ b/src/scss/components/_results.scss
@@ -17,26 +17,26 @@
     grid-column-gap: 2rem;
     grid-row-gap: 0.5rem;
 
-    @media only screen and (max-width: 1400px) {
+    @media #{$breakpoint-xxlarge} {
       grid-template-columns: repeat(3, 1fr);
     }
 
-    @media only screen and (max-width: 1200px) {
+    @media #{$breakpoint-xlarge} {
       grid-template-columns: repeat(2, 1fr);
       margin: 1.875rem 0 3.125rem 0;
     }
 
-    @media only screen and (max-width: 568px) {
+    @media #{$breakpoint-mobile-landscape} {
       grid-template-columns: repeat(1, 1fr);
       margin: 1.875rem 1.5rem 1.875rem 1.875rem;
     }
   }
 
-  @media only screen and (max-width: 600px) {
+  @media #{$breakpoint-mobile-landscape} {
     margin: 2rem 2.5rem 2rem 3.125rem;
   }
 
-  @media only screen and (max-width: 400px) {
+  @media #{$breakpoint-mobile-portrait} {
     margin: 2.5rem 1.25rem 2.5rem 2.5rem;
   }
 }
