--- a/src/scss/components/_selected.scss
+++ b/src/scss/components/_selected.scss
@@ -48,7 +48,7 @@
     }
   }
 
-  @media only screen and (max-width: 1200px) {
+  @media #{$breakpoint-xlarge} {
     flex-direction: column;
     align-items: center;
     margin: 1.875rem 3.75rem;
