--- a/src/scss/components/_selected.scss
+++ b/src/scss/components/_selected.scss
@@ -1,3 +1,5 @@
+/* Selected game
+------------------------------*/
 .selected {
   display: flex;
   flex-direction: row;
@@ -15,6 +17,7 @@
     border-image-slice: 1;
   }
 
+  // Styles for box that contains selected game image
   &__overview {
     width: 100%;
 
