--- a/src/scss/components/_metacritic.scss
+++ b/src/scss/components/_metacritic.scss
@@ -1,3 +1,5 @@
+/* Metacritic component
+-------------------*/
 .metacritic {
   padding: 0.5rem;
   border-radius: 50%;
@@ -5,16 +7,20 @@
   display: inline-flex;
   align-items: center;
 
+  // Colors for when metacritic rating is more than 66
   &--high {
     color: rgb(7, 192, 7);
     border-color: rgb(7, 192, 7);
   }
+
+  // Colors for when metacritic rating is more than 33, and less than 66
 
   &--mid {
     color: rgb(240, 240, 4);
     border-color: rgb(240, 240, 4);
   }
 
+  // Colors for when metacritic rating is below 33
   &--low {
     color: rgb(230, 2, 2);
     border-color: rgb(230, 2, 2);
