--- a/src/scss/components/_sidebar.scss
+++ b/src/scss/components/_sidebar.scss
@@ -1,3 +1,5 @@
+/* Sidebar styles
+------------------*/
 .sidebar {
   background-color: #090a1c;
   width: 17rem;
@@ -54,6 +56,7 @@
       }
     }
 
+    // Title of the sidebar menu list
     &-title {
       border: 1px solid transparent;
       border-radius: 0 2rem 2rem 0;
@@ -70,6 +73,7 @@
     flex-direction: column;
   }
 
+  // Styles for the button that opens the menu when screen width is <62rem
   &__toggle {
     position: absolute;
     inset: 50% 0 auto auto;
