added profile view component, created feed, profile, friendslist components

--- a/src/scss/components/_app.scss
+++ b/src/scss/components/_app.scss
@@ -3,9 +3,10 @@
   --main-white: #f1f5ff; // Main color of texts
   --title-bg: #afafaf10; // Background for the titles in the sidemenu
   --bg-color: #0c0d21; // Main background color
-  --main-gray: #5e6271; // Non-highlighted text color
+  --main-gray: #787b85; // Non-highlighted text color
   --btn-bg: #090a1c; // Button background
   --card-bg: #202134; // Card background color
+  --purp-hl: #7000ff; // Purple highlight color
   --main-font: 'Titillium Web', sans-serif;
 }
 
