--- a/src/scss/components/_sidebar.scss
+++ b/src/scss/components/_sidebar.scss
@@ -92,7 +92,7 @@
     color: var(--main-white);
     width: 9rem;
     height: 2.5rem;
-    border: 2px solid #7000ff;
+    border: 2px solid var(--purp-hl);
     border-radius: 1.5rem;
     align-self: center;
     background-color: transparent;
