--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -9,4 +9,8 @@
 @import './components/card';
 @import './components/selected';
 @import './components/filterbutton';
+@import './components/profile';
+@import './components/profiledetails';
+@import './components/profilefeed';
+@import './components/profilefriends';
 @import './animations/skeleton';
