--- a/src/scss/components/_profiledetails.scss
+++ b/src/scss/components/_profiledetails.scss
@@ -1,24 +1,81 @@
 /* Profile card component
 ----------------*/
+// Image of the product
+.aspect-ratio {
+  width: 100%;
+  padding-top: 100%; /* 1:1 Aspect Ratio */
+  position: relative; /* If you want text inside of it */
+  margin: 0 auto;
+
+  // container for the content inside
+  div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+
+    img {
+      width: 100%;
+      height: 100%;
+
+      object-fit: cover;
+      object-position: center center;
+    }
+  }
+}
+
 .profilecard {
   display: flex;
   align-items: center;
   flex-direction: column;
+  background-color: var(--card-bg);
+  position: relative;
+  border-radius: 0.625rem;
+  align-self: flex-start;
+  padding: 0 1rem 1rem;
 
-  &--border {
-    height: 14rem;
-    width: 14rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: -webkit-linear-gradient(#7800c6, #7000ff);
-    border-radius: 50%;
+  @media #{$breakpoint-large} {
+    margin: 0 10rem;
   }
 
-  &__image {
-    // border: 0.5rem solid var(--purp-hl);
-    border-radius: 50%;
-    height: 13rem;
+  @media #{$breakpoint-tablet-portrait} {
+    margin: 0 7rem;
+  }
+
+  &__avatar {
+    padding: 0 3rem;
+    width: 100%;
+    transform: translateY(-50%);
+
+    @media (max-width: 100rem) {
+      padding: 0 2rem;
+    }
+
+    @media #{$breakpoint-xxlarge} {
+      padding: 0 1.5rem;
+    }
+
+    @media #{$breakpoint-xxlarge} {
+      padding: 0 2.5rem;
+    }
+
+    @media #{$breakpoint-large} {
+      padding: 0 5rem;
+    }
+
+    @media #{  $breakpoint-tablet-portrait} {
+      padding: 0 2rem;
+    }
+
+    div {
+      img {
+        border: 7px solid transparent;
+        background: linear-gradient(#7800c6, #7000ff) padding-box,
+          linear-gradient(#7800c6, #7000ff) border-box;
+        border-radius: 50%;
+      }
+    }
   }
 
   &__menu {
@@ -42,31 +99,37 @@
   }
 
   &__content {
-    // height: ;
-    background-color: var(--card-bg);
-    position: relative;
-    padding: 8rem 1rem 2rem;
-    top: -7rem;
-    z-index: -1;
     text-align: center;
-    border-radius: 0.625rem;
   }
 
   &__numbers {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+    grid-row-gap: 0px;
     font-weight: 600;
     font-size: 1.125rem;
+
+    @media only screen and (max-width: 1600px) {
+      grid-template-columns: auto;
+
+      grid-row-gap: 0.5rem;
+    }
+
+    @media #{$breakpoint-large} {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+    }
   }
 
   &__counter {
-    padding: 0 1.2rem;
-    border-right: 1px solid #383838;
-  }
-
-  &__counter:last-of-type {
-    border-right: none;
+    @media only screen and (max-width: 1600px) {
+      display: flex;
+      justify-content: center;
+      text-align: center;
+    }
+    @media #{$breakpoint-large} {
+      display: block;
+    }
   }
 }
