--- a/src/scss/components/_profilefeed.scss
+++ b/src/scss/components/_profilefeed.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   line-height: 1.5;
-  margin-top: 7rem;
+  // margin-top: 7rem;
 
   &__buttons {
     position: relative;
