responsive profile page, dynamic friends list

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -106,6 +106,9 @@
         cursor: pointer;
       }
 
+      @media #{$breakpoint-xxlarge} {
+        margin: 0;
+      }
       @media #{$breakpoint-mobile-landscape} {
         height: 3rem;
         width: 3rem;
