--- a/src/scss/components/_profilefriends.scss
+++ b/src/scss/components/_profilefriends.scss
@@ -13,7 +13,9 @@
     display: none;
   }
 
-  & > div {
-    margin-bottom: 0.5rem;
+  &__list {
+    li {
+      margin-bottom: 0.5rem;
+    }
   }
 }
