--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,7 +10,7 @@
 @import './components/selected';
 @import './components/filterbutton';
 @import './components/profile';
-@import './components/profiledetails';
+@import './components/profilecard';
 @import './components/profilefeed';
 @import './components/profilefriends';
 @import './animations/skeleton';
