--- a/src/scss/components/_profile.scss
+++ b/src/scss/components/_profile.scss
@@ -8,6 +8,41 @@
 
   margin: 7rem 5rem;
 
+  &__status {
+    width: 3.5rem;
+    border-radius: 50%;
+    position: relative;
+
+    &--online::before {
+      position: absolute;
+      content: '';
+      background-color: #26b119;
+      border-radius: 50%;
+      width: 0.5rem;
+      height: 0.5rem;
+      pointer-events: none;
+      inset: auto 5px 5px auto;
+    }
+
+    &--offline::before {
+      position: absolute;
+      content: '';
+      background-color: #ff0000;
+      border-radius: 50%;
+      width: 0.5rem;
+      height: 0.5rem;
+      pointer-events: none;
+      inset: auto 5px 5px auto;
+    }
+
+    img {
+      width: 3.5rem;
+      height: 3.5rem;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+  }
+
   @media #{$breakpoint-xxlarge} {
     grid-template-columns: 1fr 3fr;
   }
@@ -20,10 +55,12 @@
     margin: 10rem 5rem;
     grid-template-columns: 1fr;
   }
-}
 
-.status-online {
-}
+  @media #{$breakpoint-mobile-landscape} {
+    margin: 10rem 2.5rem 7rem 3.125rem;
+  }
 
-.status-offline {
+  @media #{$breakpoint-mobile-portrait} {
+    margin: 10rem 0.625rem 7rem 2.5rem;
+  }
 }
