--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -13,4 +13,5 @@
 @import './components/profilecard';
 @import './components/profilefeed';
 @import './components/profilefriends';
+@import './components/loginform';
 @import './animations/skeleton';
