--- a/src/scss/components/_app.scss
+++ b/src/scss/components/_app.scss
@@ -46,3 +46,42 @@ body {
     margin-left: 0;
   }
 }
+
+.aspect-ratio {
+  width: 100%;
+  padding-top: 100%; /* 1:1 Aspect Ratio */
+  position: relative; /* If you want text inside of it */
+  margin: 0 auto;
+
+  // container for the content inside
+  div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+
+    img {
+      width: 100%;
+      height: 100%;
+
+      object-fit: cover;
+      object-position: center center;
+    }
+  }
+}
+
+.btn-primary {
+  background: linear-gradient(#7800c6, #7000ff) padding-box,
+    linear-gradient(#7800c6, #7000ff) border-box;
+  border-radius: 1.5rem;
+  align-self: center;
+  margin: 0 0.4rem;
+}
+
+.btn-secondary {
+  border: 2px solid var(--purp-hl);
+  border-radius: 1.5rem;
+  align-self: center;
+  margin: 0 0.4rem;
+}
