--- a/src/scss/components/_loginform.scss
+++ b/src/scss/components/_loginform.scss
@@ -7,7 +7,7 @@
   // align-items: center;
   margin: 5rem 3rem;
 
-  input {
+  &__input {
     width: 10rem;
     margin-bottom: 2rem;
     width: 20rem;
@@ -18,15 +18,9 @@
     border: 1px solid var(--main-gray);
   }
 
-  button {
-    color: var(--main-white);
+  &__btn {
     width: 7rem;
     height: 2.5rem;
-    border: 2px solid var(--purp-hl);
-    border-radius: 1.5rem;
-    align-self: center;
-    background-color: transparent;
-    margin: 0 0.4rem;
   }
 
   &__details {
